--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
               <div class="promptpos-card promptpos-system">
                 <div class="promptpos-header">
                   <span class="promptpos-pill">System Message</span>
-                  <span style="opacity:0.75;">style instruction placed in system message</span>
+                  <span style="opacity:0.75;">style instruction is placed in system message</span>
                 </div>
                 <div class="promptpos-model">
                   <div class="promptpos-meta">Model: GPT-4o (Indian English)</div>
@@ -1006,7 +1006,7 @@
               <div class="promptpos-card promptpos-user">
                 <div class="promptpos-header">
                   <span class="promptpos-pill">User Message</span>
-                  <span style="opacity:0.75;">(style instruction placed in user message)</span>
+                  <span style="opacity:0.75;">style instruction is placed in user message</span>
                 </div>
                 <div class="promptpos-model">
                   <div class="promptpos-meta">Model: GPT-4o (Indian English)</div>
